Fix concurrency problems and some cleanup